# anonvote

./: .gitignore  README.md  pyproject.toml
anonvote/: __init__.py  dev.cfg  extensions.py  forms.py  models.py  resources.py  routes.py  schemas.py  seeder.py
anonvote/static/css/: main.css
anonvote/static/js/: main.js
anonvote/templates/: base.html  base.jinja  index.html  index.jinja  poll.jinja
anonvote/templates/partials/: _poll_form.jinja
migrations/versions/: 686ddf50967d_add_list_description.py  7decf9e2115c_rename_url_string_url_slug.py  899a2575d09a_initial_migration.py
