[tool.poetry]
name = "anonvote"
version = "0.1.0"
description = ""
authors = ["Julian Stephens <julian@julianstephens.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Assets = "^2.0"
pyScss = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"
pyright = "^1.1.253"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
